# LCMakeLib

./: .gitignore  CMakeAppDelegate.c++  CMakeAppDelegate.h  CMakeLists.txt  CMakeTemplate.c++  CMakeTemplate.h  Feature.c++  Feature.h  File.c++  File.h  FindCMakeTemplate.c++  FindCMakeTemplate.h  FindLCMakeLib.cmake  LCMakeLists.c++  LCMakeLists.h  Master.c++  Master.h  Target.c++  Target.h  main.c++  setup_env.cmake
Resources/: CMakeLists.Application.txt  CMakeLists.LinuxApp.txt  CMakeLists.MasterTemplate.txt  CMakeLists.QT5.txt  CMakeLists.Qt4.txt  FDesktop-Icons.txt  Find.template.cmake  LCMakeMainWindow.ui  NewProjectForCMake.ui  SetupEnv.Application.cmake  SetupEnv.SharedLibrary.cmake
